syntax = "proto3";

option csharp_namespace = "GrpcUser";

package user;
import "badge.proto";
import "google/protobuf/wrappers.proto"; 
import "google/protobuf/timestamp.proto"; 
import "google/protobuf/any.proto";
import "response.proto";

service GrpcServiceUser {
	rpc GetUsers(Empty) returns (GetUsersResponse);

	rpc GetUser(GetUserRequest) returns (GetUserResponse);
}

message Empty {}

message GetUserRequest {
	int32 userId = 1;
}

message GetUserResponse {
	google.protobuf.StringValue Response = 1;
}

message GetUsersResponse {
	repeated UserModel Users = 1;
}

message UserModel {
	  google.protobuf.StringValue AboutMe = 1;
	  google.protobuf.Int32Value Age = 2;
	  google.protobuf.Timestamp CreationDate = 3;
	  google.protobuf.StringValue DisplayName = 4;
	  int32 DownVotes = 5;
	  google.protobuf.StringValue EmailHarsh = 6;
	  google.protobuf.Timestamp LastAccessDate = 7;
	  google.protobuf.StringValue Location = 8;
	  int32 Reputation = 9;
	  int32 UpVotes = 10;
	  int32 Views = 11;
	  google.protobuf.StringValue WebsiteUrl = 12;
	  google.protobuf.Int32Value AccountId = 13;

	  repeated badge.BadgeModel Badges = 14;

}
